fix navbar dropdown visibility issue

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,14 +12,15 @@ body {
     overflow-x: hidden;
 }
 
+h2 { 
+    font-size: 20px !important;
+}
+
 .container { 
     min-height: 100vh; 
-    max-width: 100%;
-    overflow: hidden;
 }
 
 .row {
-    overflow: hidden;
     margin-right: 0;
 }
 
